# aoc

./: AoC06.input1  Cargo.toml  README.md  aoc01.go
2022/: Cargo.toml
2022/src/: aoc2.rs  aoc3.rs  aoc_1.rs  aoc_10.rs  aoc_11.rs  aoc_12.rs  aoc_5.rs  aoc_6.rs  aoc_7.rs  aoc_8.rs  aoc_9.rs  main.rs  test.rs  types.rs
AoC03/: main.go
AoC1/: main.go
AoC2/: main.go
aoc12/: AoC12.go
codewars/4 By 4 Skyscrapers/: main.go
codewars/7 by 7 Skyscrapers/: main.go
codewars/decode-the-morse-code-advanced/: main.go
codewars/last-digit/: main.go
codewars/libraries/: main.py
codewars/next-bigger/: main.py
codewars/parser/: main.py
codewars/pick-peaks/: main.go
codewars/range-extraction/: main.py
codewars/rotate-for-a-max/: main.go
codewars/square-into-squares/: main.go
codewars/sudoku-solution-validator/: main.py
codewars/twice-linear/: main.go
cracking/: 1-1-unique.go  1-2-perutations.go  2-7-intersection.go  3-6-stacks-sort.go  4-12-paths-with-sums.go  5-7-pairwise-swap.go
cracking/hanoi/: hanoi.go
hackerrank/matrix/: main.py
hackerrank/max_array_sum/: main.py
leetcode/: lexical_order.py  longest_valid_parentheses.py  median_two_arrays.py  number-of-ways-string.py  sum_two_lists.py
main/: AoC03.go  AoC06.go  AoC07.go  AoC08.go  AoC09.go  AoC10.go  AoC12.go  AoC25.go
main/stringio/: stringio.go
src/: aoc4.rs
